#########################################################################
# LIBRARY SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
noinst_LIBRARIES	= libGDraw-cairo.a

libGDraw_cairo_a_CXXFLAGS = $(XARALXCXXFLAGS) $(XARAFLAGS)

# the application source, library search path, and link libraries
libGDraw_cairo_a_SOURCES = gdraw-cairo.cpp gdraw2-cairo.cpp gclip-cairo.cpp cstroke-cairo.cpp bshadow2-cairo.cpp
AM_CXXFLAGS = $(XARAFLAGS)
