#########################################################################
# LIBRARY SECTION
#########################################################################
# this is the program that gets installed.  it's name is used for all
# of the other Makefile.am variables
noinst_LIBRARIES	= libScriptingTool.a

libTools_a_CXXFLAGS = $(XARALXCXXFLAGS) $(XARAFLAGS)

# the application source, library search path, and link libraries
libTools_a_SOURCES = opbezier.cpp

AM_CXXFLAGS = $(XARAFLAGS)
